# server/validation.go
@@ -1,9 +1,10 @@
 package server
 
 import (
-	"github.com/gookit/validate"
 	"strings"
 	"time"
+
+	"github.com/gookit/validate"
 )
 
 type EditCustomerDetailsRequest struct {
@@ -40,6 +41,13 @@ type CreatePurchaseRequest struct {
 }
 
 type EditPurchaseRequest = CreatePurchaseRequest
+
+type CreateRepairRequest struct {
+	Description string  `json:"description" validate:"required"`
+	Cost        float64 `json:"cost" validate:"required"`
+	// TODO - when invalid date specified it returns field is required
+	ReportedAt Date `json:"reported_at"  validate:"required"`
+}
 
 func getValidator(s interface{}) *validate.Validation {
 	validate.Config(func(opt *validate.GlobalOption) {
